--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "protobufjs": "~2.0.0-rc2",
     "superagent": "~0.12.0",
     "ws": "~0.4.25",
-    "readable-stream": "~0.2.0"
+    "readable-stream": "~0.2.0",
+    "protobuf": "~0.8.6"
   },
   "optionalDependencies": {
     "protobuf": "~0.8.6"
@@ -26,6 +27,22 @@
     "type": "git",
     "url": "git://github.com/TooTallNate/node-spotify-web.git"
   },
-  "author": "Nathan Rajlich <nathan@tootallnate.net> (http://tootallnate.net)",
-  "license": "MIT"
+  "author": {
+    "name": "Nathan Rajlich",
+    "email": "nathan@tootallnate.net",
+    "url": "http://tootallnate.net"
+  },
+  "license": "MIT",
+  "readme": "node-spotify-web\n================\n### NodeJS implementation of the Spotify Web protocol\n\nThis module implements the \"Spotify Web\" WebSocket protocol that is used on\nSpotify's [Web UI](http://play.spotify.com).\n\nThis module is heavily inspired by the original open-source Python implementation:\n[Hexxeh/spotify-websocket-api](https://github.com/Hexxeh/spotify-websocket-api).\n\nInstallation\n------------\n\n``` bash\n$ npm install spotify-web\n```\n\n\nExample\n-------\n\nHere's an example of logging in to the Spotify server and creating a session. Then\nrequesting the metadata for a given track URI, and playing the track audio file\nthrough the speakers:\n\n``` javascript\nvar lame = require('lame');\nvar Speaker = require('speaker');\nvar Spotify = require('spotify-web');\nvar uri = process.argv[2] || 'spotify:track:6tdp8sdXrXlPV6AZZN2PE8';\n\n// Spotify credentials...\nvar username = process.env.USERNAME;\nvar password = process.env.PASSWORD;\n\nSpotify.login(username, password, function (err, spotify) {\n  if (err) throw err;\n\n  // first get a \"Track\" instance from the track URI\n  spotify.get(uri, function (err, track) {\n    if (err) throw err;\n    console.log('Playing: %s - %s', track.artist[0].name, track.name);\n\n    // play() returns a readable stream of MP3 audio data\n    track.play()\n      .pipe(new lame.Decoder())\n      .pipe(new Speaker())\n      .on('finish', function () {\n        spotify.disconnect();\n      });\n\n  });\n});\n```\n\nSee the `example` directory for some more example code.\n\n\nAPI\n---\n\nTODO: document!\n",
+  "readmeFilename": "README.md",
+  "bugs": {
+    "url": "https://github.com/TooTallNate/node-spotify-web/issues"
+  },
+  "homepage": "https://github.com/TooTallNate/node-spotify-web",
+  "_id": "spotify-web@1.2.0",
+  "dist": {
+    "shasum": "f4e13feb09c6b9a296dbad9638987140bd5f22c5"
+  },
+  "_from": "spotify-web@",
+  "_resolved": "https://registry.npmjs.org/spotify-web/-/spotify-web-1.2.0.tgz"
 }
